# algomethod

./: .env  .gitignore  Makefile  README.md  hello.py  pyproject.toml  test_heapsort.py  unionfind.py
src/: heapsort.py
src/mob_pro/: abc240_a.py  abc240_c.py  abc_240_f.py
src/myalgo/: __init__.py  heapsort.py  levenshtain.py
src/myalgo/unionfind/: nendo.py
src/ninety/: p05_7.1_restricted_digits.py  p05_7.2_restricted_digits.py  p05_7_restricted_digits.py  p17_7.1_crossing_segments.py  p17_7.2_crossing_segments.py  p17_7_crossing_segments.py  p23_7.1_avoid_war.py  p23_7.2_avoid_war.py  p23_7.3.2_avoid_war.py  p23_7.3.3_avoid_war.py  p23_7.3_avoid_war.py  p23_7_avoid_war.py  p25_7_digit_product_equation.py  p35_7.1.x_preserve_connectivity.py  p35_7.2.x_preserve_connectivity.py  p35_7_preserve_connectivity.py  p40_7_get_more_money.py  p41_piles_in_a_atcoder_farm.py  p47_7.1_monochromatic_diagnol.py  p47_7_monochromatic_diagnol.py  p49.ipynb  p53_7.1_discrete_dowsing.py  p53_7.2_discrete_dowsing.py  p53_7.3_discrete_dowsing.py  p53_7.4.2_discrete_dowsing.py  p53_7.4_discrete_dowsing.py  p53_7.x_discrete_dowsing.py  p53_7_discrete_dowsing.py  p59_7.2_many_graph_queries.py  p59_7.7.x_many_graph_queries.py  p59_7_many_graph_queries.py  p65_7.1_rgb_balls2.py  p65_7.2_rgb_balls2.py  p65_7_rgb_balls2.py  p71_7.3_fuzzy_priority.py  p71_7_fuzzy_priority.py  p77_7.2.x_planes_on_a_2d_plane.py  p77_7.2.xx_planes_on_a_2d_plane.py  p77_7.2_planes_on_a_2d_plane.py  p77_7_planes_on_a_2d_plane.py  (+3 more)
src/test/: test_heapsort.py  test_p81.py
src/unionfind/: unionfind_ngroups.py
(+61 files in other folders)
