[tool.poetry]
name = "myalgo"
version = "0.1.0"
description = ""
authors = ["Shota Shimizu <shota_shimizu@caddi.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.3.0"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
jupyterlab = "^3.0"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
